<resources>
    <string name="app_name">Medicana - for patients</string>
    <string name="app_title">Medicana</string>
    <string name="app_subtitle">For patients</string>
    <string name="auth_phone_number">Phone number</string>
    <string name="auth_password">Password</string>
    <string name="auth_login">Login</string>
    <string name="auth_welcome">Welcome</string>
    <string name="auth_invalid">Invalid phone number or password</string>
    <string name="menu_doctors">Doctors</string>
    <string name="menu_appointments">Appointments</string>
    <string name="menu_treatments">Treatments</string>
    <string name="menu_advice">Advice</string>
    <string name="menu_profile">Profile</string>
    <string name="book_appointment">Book an appointment</string>
    <string name="cancel_appointment">Cancel appointment</string>
    <string name="find_doctos">Find doctors and book appointments</string>
    <string name="need_auth">To continue, you need to login</string>
    <string name="appointment_ready">Your appointment is ready now!</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="my_appointments">Keep up with your appointments</string>
    <string name="ask_advice">Ask your doctors for advice</string>
    <string name="ask_me">Ask me anything!</string>
    <string name="call">Call</string>
    <string name="directions">Directions</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="welcome">Welcome!</string>
    <string name="booking_success">Your appointment has been booked!</string>
    <string name="booking_cancel">Your appointment has been canceled!</string>
    <string name="error">An error has occurred</string>
    <string name="internet_error">No internet</string>
    <string name="fb_error">Facebook wasn\'t detected</string>
    <string name="login_error">Wrong phone number or password</string>
    <string name="send">Send</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="logo">Logo</string>
    <string name="message">Message</string>
    <string name="logout">Logout</string>
    <string name="treatment">Treatment</string>
    <string name="keep_up_with_your_treatments">Keep up with your treatments</string>
    <string name="current">Current</string>
    <string name="old">Old</string>
    <string name="missing_phone_pass">Please login with your phone number and password</string>
    <string name="db_error">Your information wasn\'t completely restored</string>
</resources>