<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_host"
        android:enabled="true"
        android:icon="@drawable/ic_doctors"
        android:title="@string/menu_doctors"
        android:visible="true" />

    <item
        android:id="@+id/appointmentsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_appointment"
        android:title="@string/menu_appointments"
        android:visible="true" />

    <item
        android:id="@+id/treatmentsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_treatment"
        android:title="@string/menu_treatments"
        android:visible="true" />

    <item
        android:id="@+id/advicesFragment"
        android:enabled="true"
        android:icon="@drawable/ic_advice"
        android:title="@string/menu_advice"
        android:visible="true" />

    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_user"
        android:title="@string/menu_profile"
        android:visible="true" />

</menu>