<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/medicana"
    tools:context=".fragment.AuthFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/auth_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:theme="@style/ToolbarBackWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/auth_login_title"
            app:layout_constraintVertical_bias="0.25">

            <EditText
                android:id="@+id/auth_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_field_height"
                android:layout_marginVertical="10dp"
                android:background="@drawable/bg_rounded_white_small"
                app:drawableEndCompat="@drawable/ic_phone"
                app:drawableRightCompat="@drawable/ic_phone"
                android:hint="@string/auth_phone_number"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="15dp"
                android:paddingRight="15dp"
                android:textColorHighlight="@color/medicana_light"
                android:textColorLink="@color/medicana_light" />

            <EditText
                android:id="@+id/auth_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_field_height"
                android:layout_marginVertical="10dp"
                android:autofillHints=""
                android:background="@drawable/bg_rounded_white_small"
                app:drawableEndCompat="@drawable/ic_lock"
                app:drawableRightCompat="@drawable/ic_lock"
                android:hint="@string/auth_password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="15dp"
                android:paddingRight="15dp"
                android:textColorHighlight="@color/medicana_light"
                android:textColorLink="@color/medicana_light" />

            <Button
                android:id="@+id/auth_login_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginVertical="10dp"
                android:background="@drawable/bg_rounded_white_small"
                android:text="@string/auth_login"
                android:textStyle="bold"
                android:textColor="@color/medicana" />
        </LinearLayout>

        <ImageView
            android:id="@+id/auth_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/auth_toolbar"
            app:srcCompat="@drawable/ic_medicana_logo_white"
            android:contentDescription="@string/logo" />

        <TextView
            android:id="@+id/auth_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textColor="@color/white"
            android:textSize="@dimen/big_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/auth_logo"
            app:layout_constraintStart_toStartOf="@+id/auth_logo"
            app:layout_constraintTop_toBottomOf="@+id/auth_logo" />

        <TextView
            android:id="@+id/auth_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/app_subtitle"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/auth_app_name"
            app:layout_constraintStart_toStartOf="@+id/auth_app_name"
            app:layout_constraintTop_toBottomOf="@+id/auth_app_name" />

</androidx.constraintlayout.widget.ConstraintLayout>