<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AppointmentFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AppointmentFragment"
    android:background="@color/medicana">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/appointment_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/transparent"
        android:theme="@style/ToolbarBackWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/appointment_call_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/call"
            app:layout_constraintBottom_toBottomOf="@+id/appointment_doctor_photo"
            app:layout_constraintEnd_toStartOf="@+id/appointment_doctor_photo"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appointment_toolbar"
            app:srcCompat="@drawable/ic_phone_white" />

        <ImageView
            android:id="@+id/appointment_map_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/directions"
            app:layout_constraintBottom_toBottomOf="@+id/appointment_doctor_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/appointment_doctor_photo"
            app:layout_constraintTop_toBottomOf="@+id/appointment_toolbar"
            app:srcCompat="@drawable/ic_map_pin_white" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/appointment_doctor_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appointment_toolbar"
            app:shapeAppearanceOverlay="@style/fullRoundEdge"
            tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/appointment_doctor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:singleLine="true"
        android:text="TextView"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/appointment_doctor_photo"
        app:layout_constraintStart_toStartOf="@+id/appointment_doctor_photo"
        app:layout_constraintTop_toBottomOf="@+id/appointment_doctor_photo"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/appointment_doctor_specialty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="TextView"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="@+id/appointment_doctor_name"
        app:layout_constraintStart_toStartOf="@+id/appointment_doctor_name"
        app:layout_constraintTop_toBottomOf="@+id/appointment_doctor_name"
        tools:ignore="HardcodedText" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_bottom_sheet_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appointment_doctor_specialty">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/date"
                    app:srcCompat="@drawable/ic_date" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/time"
                    app:srcCompat="@drawable/ic_time" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearLayout5">

                <TextView
                    android:id="@+id/appointment_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="TextView"
                    android:textAlignment="center"
                    android:textColor="@color/medicana_light"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/appointment_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="TextView"
                    android:textAlignment="center"
                    android:textColor="@color/medicana_light"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <ImageView
                android:id="@+id/appointment_qr_code"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginBottom="250dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:contentDescription="QR"
                tools:ignore="HardcodedText"
                tools:src="@android:drawable/ic_menu_gallery" />


        </LinearLayout>

        </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:visibility="gone"
        android:id="@+id/dimmed_bg"
        android:background="@drawable/bg_dimmed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

<androidx.coordinatorlayout.widget.CoordinatorLayout
android:layout_width="match_parent"
android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/appointment_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_bottom_sheet"
        android:elevation="@dimen/elevation"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        tools:ignore="UnusedAttribute">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="32dp"
            android:textStyle="bold"
            android:text="@string/cancel_appointment"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/appointment_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/bg_rounded_white_small"
            android:text="@string/confirm"
            android:textStyle="bold"
            android:textColor="@color/medicana" />


    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>



</FrameLayout>